feat: add docker-compose and all configs for project